Addresses continuing issues with 3908